Use jlink and jpackage directly